# void

./: .coverage  .gitignore  .pre-commit-config.yaml  ALL_5_FEATURES_COMPLETE.md  API_DOCUMENTATION.md  API_USAGE_GUIDE.md  AUTHENTICATION_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE.md  CONTRIBUTING.md  DOCUMENTATION_INDEX.md  ENTERPRISE_READINESS_PLAN.py  ENTERPRISE_READINESS_SUMMARY.md  EULA.md  FAQ.md  FEATURES.md  FEATURES_SUMMARY.md  FRP_METHODS_COMPLETE.md  FRP_WIZARD_DEMO.py  FRP_WIZARD_FIX_SUMMARY.md  FRP_WIZARD_UI.md  GUI_COMPLETENESS_SUMMARY.md  GUI_FEATURE_ENHANCEMENTS.md  GUI_REORGANIZATION.md  GUI_USER_GUIDE.md  GUI_WINDOW_IMPROVEMENTS.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_READINESS_SUMMARY.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  REORGANIZATION_SUMMARY.txt  SECURITY.md  TERMS_OF_SALE.md  UPGRADE_SUMMARY.md  coverage.xml  (+5 more)
.github/workflows/: ci.yml  release.yml  security.yml
docs/: CUSTOMER_PORTAL.md  DEPLOYMENT_GUIDE.md  FEATURES_COMPARISON.md  LICENSING_GUIDE.md  SCREENSHOTS.md
tests/: conftest.py  test_authentication.py  test_authorization.py  test_config.py  test_core_helpers.py  test_crypto.py  test_embedded_tools.py  test_frp_wizard.py  test_licensing.py  test_problem_solver.py  test_usb_debugging.py
void/: __init__.py  __main__.py  apps.py  backup.py  cli.py  config.py  core.py  crypto.py  database.py  device.py  files.py  frp.py  gui.py  license_generator.py  licensing.py  logcat.py  logger.py  logging.py  main.py  monitor.py  network.py  performance.py  recovery.py  report.py  screen.py  telemetry.py  terms.py  tweaks.py  ui.py  updater.py  utils.py
void/api/: server.py
void/core/: __init__.py  apps.py  assets.py  authorized_debug_enable.py  authorized_device_auditor.py  backup.py  browser.py  data_recovery.py  database.py  device.py  diagnostics.py  display.py  edl.py  edl_toolkit.py  fastboot.py  files.py  firmware_integrity.py  frp.py  gemini.py  input.py  launcher.py  logcat.py  logging.py  monitor.py  network.py  partitions.py  performance.py  privacy.py  problem_solver.py  process.py  recovery.py  recovery_control.py  report.py  rom_validation.py  screen.py  setup_wizard.py  shell.py  smart.py  startup.py  system.py  (+2 more)
void/core/auth/: __init__.py  authentication.py  authorization.py
void/core/chipsets/: __init__.py  base.py  dispatcher.py  generic.py  mediatek.py  qualcomm.py  samsung.py  utils.py
void/core/tools/: __init__.py  android.py  base.py  mediatek.py  qualcomm.py
void/data/: __init__.py  firehose_sources.json  license_schema.sql
void/plugins/: __init__.py  base.py  edl_testpoint.py  example.py  registry.py
void/tools/: embedded.py
void/ui/: __init__.py  help_system.py
void_suite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
