[project]
name = "void-suite"
version = "6.0.1"
description = "Void Suite: Android maintenance/recovery toolkit with adb/fastboot, EDL, diagnostics, optional GUI, and Gemini-powered AI agent mode"
requires-python = ">=3.9"
dependencies = [
    "psutil",
    "pycryptodome",
    "rich",
]

[project.optional-dependencies]
advanced = []
gui = ["playwright"]

[project.scripts]
void = "void.main:main"

[tool.setuptools]
packages = [
    "void",
    "void.core",
    "void.core.chipsets",
    "void.core.tools",
    "void.data",
    "void.plugins",
]

[tool.setuptools.package-data]
"void.data" = ["firehose_sources.json"]
